# permastate-rust

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.example  permastate.rs
src/discovery/: discovery.rs
src/eventsourced/: mod.rs
src/protos/: domain.rs  shoppingcart.rs
src/value_entity/: mod.rs
